[package]
name = "nag_me"
version = "0.1.0"
authors = ["Curtis Jones <ikubetoomuzik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sorted-vec = "0.5"
futures = "0.3"
rand = "0.8"
uuid = { version = "0.8", features = ["v4"] }
async-std = "1.9"
